--- a/stack.yml
+++ b/stack.yml
@@ -16,7 +16,7 @@ services:
 
 - name: nginx
   title: Nginx
-  service: nginx
+  service: nginx-php
   required: true
   containers:
   - name: nginx
