--- a/stack.yml
+++ b/stack.yml
@@ -1,4 +1,4 @@
-name: php
+name: php-nginx
 icon: php
 title: PHP
 
@@ -34,19 +34,6 @@ services:
   volumes:
   - name: data
     size: 20
-
-- name: httpd
-  title: Apache HTTP server
-  service: httpd
-  disabled: true
-  containers:
-  - name: httpd
-    env:
-    - name: APACHE_VHOST_PRESET
-      value: php
-  links:
-  - name: backend
-    service: php
 
 - name: postgres
   title: PostgreSQL
