--- a/stack.yml
+++ b/stack.yml
@@ -10,6 +10,8 @@ services:
   links:
   - name: db
     service: mariadb
+  - name: sendmail
+    service: opensmtpd
 
 - name: nginx
   title: Nginx
@@ -57,6 +59,11 @@ services:
   title: Valkey
   service: valkey
   disabled: true  
+
+- name: opensmtpd
+  required: false
+  title: OpenSMTPD
+  service: opensmtpd
 
 - name: gotenberg
   title: Gotenger
