--- a/stack.yml
+++ b/stack.yml
@@ -11,7 +11,7 @@ services:
   - name: db
     service: mariadb
   - name: sendmail
-    service: opensmtpd
+    service: mailpit
 
 - name: nginx
   title: Nginx
@@ -60,8 +60,12 @@ services:
   service: valkey
   disabled: true  
 
+- name: mailpit
+  title: Mailpit
+  service: mailpit
+
 - name: opensmtpd
-  required: false
+  disabled: true
   title: OpenSMTPD
   service: opensmtpd
 
